--- a/resources/css3/style.css
+++ b/resources/css3/style.css
@@ -396,18 +396,17 @@ body {
   -webkit-clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
   clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
   width: 100%;
-  height: 74vh;
+  height: 90vh;
   overflow: hidden;
   position: relative;
-  padding-left: 35%;
   z-index: 600; }
   @media (max-width: 37.5em) {
     .section-container-1 {
-      padding-bottom: 80rem; } }
+      padding-bottom: 100rem; } }
   .section-container-1__icon {
     font-size: 6rem;
     position: absolute;
-    top: 18%;
+    top: 28%;
     left: 48%;
     display: inline-block;
     background-image: linear-gradient(to right, #7cd000, #577a1a);
@@ -418,12 +417,12 @@ body {
     @media (max-width: 56.25em) {
       .section-container-1__icon {
         margin-bottom: 0;
-        top: 10%; } }
+        top: 20%; } }
     @media (max-width: 37.5em) {
       .section-container-1__icon {
-        top: 10%; } }
+        top: 20%; } }
   .section-container-1__text {
-    padding: 15rem 5rem 0 5rem;
+    padding: 25rem 5rem 0 5rem;
     text-align: center; }
   @media (max-width: 37.5em) {
     .section-container-1__button-1 {
@@ -441,10 +440,12 @@ body {
   width: 100%;
   height: 90vh;
   margin-top: -12rem;
-  padding-left: 35%;
   overflow: hidden;
   position: relative;
   z-index: 500; }
+  @media (max-width: 56.25em) {
+    .section-container-2 {
+      margin-top: -15rem; } }
   @media (max-width: 37.5em) {
     .section-container-2 {
       padding-bottom: 80rem;
@@ -463,13 +464,13 @@ body {
     @media (max-width: 56.25em) {
       .section-container-2__icon {
         margin-bottom: 0;
-        top: 10%; } }
+        top: 23%; } }
   .section-container-2__text {
     padding: 20rem 5rem 0 5rem;
     text-align: center; }
     @media (max-width: 56.25em) {
       .section-container-2__text {
-        padding-top: 20rem;
+        padding-top: 30rem;
         padding-bottom: 15rem; } }
   @media (max-width: 37.5em) {
     .section-container-2__button-2 {
@@ -487,7 +488,6 @@ body {
   width: 100%;
   height: 105vh;
   margin-top: -15rem;
-  padding-left: 35%;
   overflow: hidden;
   position: relative;
   z-index: 400; }
@@ -511,7 +511,7 @@ body {
     @media (max-width: 56.25em) {
       .section-container-3__icon {
         margin-bottom: 0;
-        top: 10%; } }
+        top: 20%; } }
   .section-container-3__text {
     padding-right: 5rem;
     padding-left: 5rem;
@@ -519,7 +519,7 @@ body {
     text-align: center; }
     @media (max-width: 56.25em) {
       .section-container-3__text {
-        padding-top: 20rem;
+        padding-top: 30rem;
         padding-bottom: 25rem; } }
   @media (max-width: 37.5em) {
     .section-container-3__button-3 {
@@ -537,7 +537,6 @@ body {
   width: 100%;
   height: 100vh;
   margin-top: -20rem;
-  padding-left: 35%;
   overflow: hidden;
   position: relative;
   z-index: 300; }
@@ -561,7 +560,7 @@ body {
     @media (max-width: 56.25em) {
       .section-container-4__icon {
         margin-bottom: 0;
-        top: 10%;
+        top: 50%;
         margin-top: -15rem; } }
   .section-container-4__text {
     padding-right: 5rem;
@@ -570,7 +569,7 @@ body {
     text-align: center; }
     @media (max-width: 56.25em) {
       .section-container-4__text {
-        padding-top: 20rem; } }
+        padding-top: 50rem; } }
   @media (max-width: 37.5em) {
     .section-container-4__button-4 {
       position: absolute;
