--- a/resources/sass/components/_section-containers.scss
+++ b/resources/sass/components/_section-containers.scss
@@ -23,24 +23,23 @@
     clip-path: polygon(0 0, 100% 0, 100% 86%, 0% 100%);
     // WIDTH AND HEIGHT OF THE CONTAINER
     width: 100%;
-    height: 74vh;
+    height: 90vh;
     // POSITIONING
     overflow: hidden;
     position: relative;
     // PADDING AND Z-INDEX
-    padding-left: 35%;
     z-index: 600;
 
     // * --- MEDIA QUERIES | FOR CONTAINER 1 --- * \\
     @include respond(phone) {
-        padding-bottom: 80rem;
+        padding-bottom: 100rem;
     }
 
     // ICON SETUP
     &__icon {
         font-size: 6rem;
         position: absolute;
-        top: 18%;
+        top: 28%;
         left: 48%;
 
         // SETUP THE TEXT (h2) TO DISPLAY WITH MULTIPLE COLORS IN THE BACKGROUND \\
@@ -54,23 +53,23 @@
         // * --- MEDIA QUERIES | FOR THE ICON 1 --- * \\
         @include respond(tab-port) {
             margin-bottom: 0;
-            top: 10%;
+            top: 20%;
         }
 
         @include respond(phone) {
-            top: 10%;
+            top: 20%;
         }
     }
 
-    // PARAGRAPH TEXT SETUP
+    // CONTENT INSIDE OF THE TEXT DIV ELEMENT
     &__text {
-        padding: 15rem 5rem 0 5rem;
+        padding: 25rem 5rem 0 5rem;
         text-align: center;
     }
 
     // READ MORE BUTTON SETUP 
     &__button-1 {                  
-       // @include button-center;   // IF BUTTON NEEDS TO BE POSITIONED ON CENTER, UNCOMMENT THIS
+       //@include button-center;   // IF BUTTON NEEDS TO BE POSITIONED ON CENTER, UNCOMMENT THIS
 
         // * --- MEDIA QUERIES | FOR THE BUTTON CENTERING --- * \\
         @include respond(phone) {
@@ -95,7 +94,6 @@
     width: 100%;
     height: 90vh;
     margin-top: -12rem;
-    padding-left: 35%;
     // POSITIONING
     overflow: hidden;
     position: relative;
@@ -103,6 +101,10 @@
     z-index: 500;
 
     // * --- MEDIA QUERIES | FOR CONTAINER 2 GENERAL --- * \\
+    @include respond(tab-port) {
+        margin-top: -15rem;
+    }
+
     @include respond(phone) {
         padding-bottom: 80rem;
         margin-top: -14rem;
@@ -126,18 +128,18 @@
         // * --- MEDIA QUERIES | FOR THE ICON --- * \\
         @include respond(tab-port) {
             margin-bottom: 0;
-            top: 10%;
+            top: 23%;
         }
     }
 
-    // PARAGRAPH TEXT SETUP
+    // CONTENT INSIDE OF THE TEXT DIV ELEMENT
     &__text {
         padding: 20rem 5rem 0 5rem;
         text-align: center;
 
           // * --- MEDIA QUERIES | FOR THE PARAGRAPH --- * \\
           @include respond(tab-port) {
-            padding-top: 20rem;
+            padding-top: 30rem;
             padding-bottom: 15rem;
         }
     }
@@ -168,7 +170,6 @@
     width: 100%;
     height: 105vh;
     margin-top: -15rem;
-    padding-left: 35%;
     // POSITIONING
     overflow: hidden;
     position: relative;
@@ -202,11 +203,11 @@
 
         @include respond(tab-port) {
             margin-bottom: 0;
-            top: 10%;
+            top: 20%;
         }
     }
 
-    // PARAGRAPH TEXT SETUP
+    // CONTENT INSIDE OF THE TEXT DIV ELEMENT
     &__text {
         padding-right: 5rem;
         padding-left: 5rem;
@@ -215,7 +216,7 @@
 
         // * --- MEDIA QUERIES | FOR THE PARAGRAPH --- * \\
         @include respond(tab-port) {
-            padding-top: 20rem;
+            padding-top: 30rem;
             padding-bottom: 25rem;
         }
     }
@@ -246,7 +247,6 @@
     width: 100%;
     height: 100vh;
     margin-top: -20rem;
-    padding-left: 35%;
     // POSITIONING
     overflow: hidden;
     position: relative;
@@ -254,6 +254,8 @@
     z-index: 300;
 
     // * --- MEDIA QUERIES | FOR THE CONTAINER 4 --- * \\
+
+
     @include respond(phone) {
         padding-bottom: 80rem;
     }
@@ -280,12 +282,12 @@
 
         @include respond(tab-port) {
             margin-bottom: 0;
-            top: 10%;
+            top: 50%;
             margin-top: -15rem;
         }
     }
 
-    // PARAGRAPH TEXT SETUP
+    // CONTENT INSIDE OF THE TEXT DIV ELEMENT
     &__text {
         padding-right: 5rem;
         padding-left: 5rem;
@@ -294,7 +296,7 @@
 
         // * --- MEDIA QUERIES | FOR THE PARAGRAPH --- * \\
         @include respond(tab-port) {
-            padding-top: 20rem;
+            padding-top: 50rem;
         }
     }
 
